# Inteligentne-Metody-Optymalizacji

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  experiment_runner.py  main.py  plot_results.py  solution_visualizer.py
.devcontainer/: Dockerfile  devcontainer.json
common/: CMakeLists.txt
common/include/: solve_result.h
common/include/io/: instance_reader.h  result_printer.h  solver_cli_utils.h
common/src/: solution_checker.cpp
common/src/io/: result_printer.cpp
instances/: TSPA.csv  TSPB.csv
lab1/: CMakeLists.txt
lab1/src/: main.cpp
lab1/src/solvers/: constructive_heuristic_solver.cpp  constructive_heuristic_solver.h  greedy_cycle_solver.cpp  greedy_cycle_solver.h  nearest_neighbor_solver.cpp  nearest_neighbor_solver.h  random_solver.cpp  regret_solver.cpp  regret_solver.h
lab2/: CMakeLists.txt
lab2/src/: main.cpp
lab2/src/solvers/: local_search_solver.cpp  local_search_solver.h  local_search_structures.h
results/: experiment_results.csv
results/lab1/: experiment_results.csv
results/lab2/: experiment_results.csv  experiment_results.json  report_summary.csv
scripts/: build_and_run.sh  experiment_runner.py  main.py  plot_results.py  solution_visualizer.py
src/: instance.h  main.cpp  solution_checker.h  solve_result.h
src/io/: instance_reader.cpp  result_printer.cpp
src/solvers/: base_solver.h  constructive_heuristic_solver.cpp  greedy_cycle_solver.cpp  greedy_cycle_solver.h  nearest_neighbor_solver.cpp  nearest_neighbor_solver.h  random_solver.cpp  random_solver.h  regret_solver.cpp  regret_solver.h
(+4 files in other folders)
